[package]
name = "rudo"
version = "0.0.1"
authors = ["hood <hood@null.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.110", features = ["derive"] } 
serde_json = "1.0.53"
structopt = "0.3.20"
dirs = "3.0.0"